# Thingy-91-Condition-Based-Maintenance

./: .gitignore  .gitmodules  README.md
thingy/application/: CMakeLists.txt  prj.conf  thingy91_nrf9160_ns.overlay
thingy/application/include/: accels.h  inference.hpp  led_alerts.h  leds.h  mqtt.h  pca.h  sensors.h  sig.h
thingy/application/model-parameters/: dsp_blocks.h  model_metadata.h  model_variables.h
thingy/application/src/: accels.c  inference.cpp  led_alerts.c  leds.c  main.c  main.cpp  mqtt.c  pca.c  sensors.c  sig.c
thingy/application/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
thingy/dataset_collector/: dataset_collector.py  pca_creator.py  pca_sample_collector.py  pca_samples_plot.py  samples.csv
thingy/neural_dataset_collector/: neural_sample_collector.py  temp.py
thingy/neural_dataset_collector/dataset/: bearing.1.csv  bearing.10.csv  bearing.100.csv  bearing.1000.csv  bearing.11.csv  (+5238 more)
thingy/pca_dataset_collector/: pca_creator.py  pca_sample_collector.py
workbench/: README.md
workbench/controller/: platformio.ini
workbench/gui/: bearing_control_widget.py  connection_widget.py  default.yaml  gui.py  heater_control_widget.py  impact_control_widget.py  main_window.py  motor_control_widget.py  noise_control_widget.py  state
workbench/schematics/: arduino.sch-bak  mains.sch-bak  psu.sch-bak  schematics-cache.lib  schematics.net  schematics.pro  schematics.sch  schematics.sch-bak  step_down_16.sch  step_down_5.sch
workbench/stl/: din_stand.stl  encoder_ring.stl  motor_mount.stl  servo_holder.stl  thingy_holder.stl
(+4 files in other folders)
